# softglam

./: .gitignore  .npmrc  .prettierignore  Project _Description.md  beauty-app-design-concept.md  debug-expo-bundle-stall.md  docker-compose.yml  guide.md  mobile-ui-guide.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_add_products_table.py  b2c3d4e5f6a7_add_appointments_tables.py  c3d4e5f6a7b8_fix_enum_and_timestamps.py  d0244a1d771a_initial_schema.py  d4e5f6a7b8c9_add_looks_tables.py
apps/api/app/: main.py  models.py
apps/api/app/core/: config.py  database.py  deps.py  security.py
apps/api/app/modules/appointments/: models.py  router.py  schemas.py
apps/api/app/modules/artists/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/auth/: router.py  schemas.py  service.py
apps/api/app/modules/health/: router.py
apps/api/app/modules/invites/: models.py  router.py  schemas.py
apps/api/app/modules/look_requests/: models.py  router.py  schemas.py
apps/api/app/modules/looks/: catalog.py  generation.py  models.py  router.py  schemas.py
apps/api/app/modules/products/: models.py  router.py  schemas.py
apps/api/app/modules/skin_profiles/: models.py  (+3 more)
apps/api/app/scripts/: seed_demo.py
apps/api/tests/: conftest.py  helpers.py  test_appointments.py  test_artists.py  test_auth.py  test_health.py  test_integration_flow.py  test_invites.py  test_look_requests.py  test_products.py  test_skin_profiles.py
(+80 files in other folders)
