[project]
name = "softglow-api"
version = "0.1.0"
description = "Softglow FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "asyncpg>=0.29",
    "fastapi>=0.136.3",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.13.4",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "anyio>=4.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
